--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "start": "webpack-dev-server --history-api-fallback --inline --progress"
   },
   "keywords": [],
@@ -31,6 +32,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "modernizr": "^3.6.0",
     "popper.js": "^1.14.5"
   }
 }
